# logan

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bookmark.cpp  bookmark.h  bookmark_structure.h  bookmarkslist.cpp  bookmarkslist.h  bookmarkslist.ui  bookmarksview.cpp  bookmarksview.h  bookmarksview.ui  constants.h  doc_supervisor.cpp  doc_supervisor.h  emphasis_color_manager.cpp  emphasis_color_manager.h  example-empty-logfile  grep_structure.h  grepwindow.cpp  grepwindow.ui  linenumberarea.h  logan.cpp  logan.h  logan.ui  logan2.pro  logfile_handler.cpp  logfile_handler.h  logfile_manager.cpp  logfile_manager.h  logsdisplay.cpp  logsdisplay.h  logsdisplay.ui  main.cpp  premake_build.lua  (+15 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
buildsystem/: compiler_support.cmake  library_support.cmake
buildsystem/CMake/: compiler_support.cmake  configuration.cmake  library_support.cmake  package.cmake  utilities.cmake
buildsystem/Premake/: libraries.lua  utilities.lua
doc/: sanity_rules.md
executable/: CMakeLists.txt  main.cpp
installer/windows/: Logan.wxs
production/: CMakeLists.txt  premake5.lua
production/include/common/: testable_assert.h
production/include/executor/: application.h  bookmark_structure.h  bookmark_t.h  config_file_manager.h  configuration_manager.h  configurator.h  doc_supervisor.h  executor.h  field_selector.h  filter_package.h  grep_structure.h  logfile_handler.h  logfile_manager.h  options.h  os_proxy.h  project_controller.h  project_workspace.h  sshconnection.h  version.h
production/include/ui/: aboutdialog.h  bookmark.h  bookmarkslist.h  configuration_manager.h  grepwindow.h  license_item_t.h  logan.h  logfile_handler.h  logfile_manager.h  logfilemerger.h  logsdisplay.h  main.h  newbookmarkwindow.h  openremotefiledialog.h  project_configuration.h  project_controller.h  rootlogfiledisplay.h  searchwindow.h  singlelogdisplay.h
production/libs/: CMakeLists.txt  premake5.lua
production/libs/ChaiScript/: CMakeLists.txt
production/libs/Lyra/: CMakeLists.txt
production/libs/libarchive/: CMakeLists.txt
production/libs/libssh2/: CMakeLists.txt
production/libs/libwebsockets/: CMakeLists.txt
production/libs/pugixml/: CMakeLists.txt  premake5.lua
production/libs/rapidjson/: CMakeLists.txt
production/libs/spdlog/: CMakeLists.txt  premake5.lua
production/libs/sqlite/: CMakeLists.txt
production/subsystems/: CMakeLists.txt  premake5.lua
production/subsystems/executor/: CMakeLists.txt  premake5.lua
production/subsystems/executor/src/: application.cpp  config_file_manager.cpp  configuration_manager.cpp  configurator.cpp  doc_supervisor.cpp  emphasis_color_manager.cpp  executor.cpp  filters.cpp  logfile_handler.cpp  logfile_manager.cpp  options.cpp  os_proxy.cpp  project_configuration.cpp  project_controller.cpp  project_workspace.cpp  sshconnection.cpp
production/subsystems/ui/: CMakeLists.txt
production/subsystems/ui/src/: aboutdialog.cpp  bookmark.cpp  bookmarkslist.cpp  config_file_manager.cpp  configuration_manager.cpp  doc_supervisor.cpp  emphasis_color_manager.cpp  filters.cpp  grepwindow.cpp  iconmenupopup.cpp  linenumberarea.cpp  logan.cpp  logfile_handler.cpp  logfile_manager.cpp  logfilemerger.cpp  logsdisplay.cpp  main.cpp  newbookmarkwindow.cpp  openremotefiledialog.cpp  project_configuration.cpp  project_controller.cpp  rootlogfiledisplay.cpp  searchwindow.cpp  settings.cpp  singlelogdisplay.cpp  sshconnection.cpp
production/subsystems/ui/ui/: aboutdialog.ui  grepwindow.ui  iconmenupopup.ui  logan.ui  logfilemerger.ui  newbookmarkwindow.ui  openremotefiledialog.ui  rootlogfiledisplay.ui  searchwindow.ui  settings.ui
resources/: resources.qrc
resources/libraries/: list.csv
resources/libraries/icons/: about.txt
resources/libraries/libarchive/: about.txt
resources/libraries/libssh2/: ABOUT.txt
resources/libraries/logan/: ABOUT.txt
resources/libraries/qt/: ABOUT.txt  about.txt
resources/presets/: config-schema.xsd  configuration.xml  defaults.logan.chai
src/: aboutdialog.cpp  aboutdialog.h  bookmark.cpp  bookmark.h  bookmarkslist.cpp  bookmarkslist.h  bookmarkslist.ui  config_file_manager.cpp  config_file_manager.h  configuration_manager.cpp  configuration_manager.h  doc_supervisor.cpp  doc_supervisor.h  grepwindow.cpp  grepwindow.h  grepwindow.ui  iconmenupopup.cpp  iconmenupopup.h  line_descriptor.h  linenumberarea.ui  logan.cpp  logan.h  logan.ui  logfile_handler.cpp  logfile_handler.h  logfile_manager.cpp  logfile_manager.h  logfilemerger.cpp  logfilemerger.h  logfilemerger.ui  logsdisplay.cpp  logsdisplay.ui  main.cpp  newbookmarkwindow.cpp  openremotefiledialog.cpp  project_configuration.cpp  project_controller.cpp  rootlogfiledisplay.cpp  rootlogfiledisplay.h  rootlogfiledisplay.ui  (+9 more)
tests/: CMakeLists.txt  premake5.lua
tests/benchmarks/: CMakeLists.txt  premake5.lua
tests/benchmarks/examples/: sorting.cpp
tests/libs/: CMakeLists.txt  premake5.lua
tests/libs/Celero/: CMakeLists.txt  premake5.lua
tests/libs/turtle/: CMakeLists.txt  premake5.lua
tests/testcases/: CMakeLists.txt  main.cpp  premake5.lua
tests/testcases/examples/: adding.cpp
tests/testcases/executor/: os_proxy_tests.cpp
tests/testcases/include/: adding.hpp
translations/: logan_en_US.ts
