CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME executable)
SET(EXECUTABLE_PROJECT ${PROJECT_NAME} PARENT_SCOPE)
PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${ROOT_DIR}/executable)
FILE (GLOB SOURCES ${PROJECT_DIR}/*.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${INTERNAL_LIBRARIES} ${SEMI_INTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES})
