CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

SET(PROJECT_NAME ${THE_NAME_OF_PROJECT})
SET(EXECUTABLE_PROJECT ${PROJECT_NAME} PARENT_SCOPE)
PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${ROOT_DIR}/executable)
FILE (GLOB SOURCES ${PROJECT_DIR}/*.cpp)

IF(NOT "${EXTERNAL_LIBRARIES}" STREQUAL "")
LIST(REMOVE_DUPLICATES EXTERNAL_LIBRARIES)
ENDIF(NOT "${EXTERNAL_LIBRARIES}" STREQUAL "")

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS} ${RESOURCES}
        ../production/include/executor/filter_package.h)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
        ${INTERNAL_LIBRARIES}
        ${SEMI_INTERNAL_LIBRARIES}
        ${EXTERNAL_LIBRARIES}
        ${TRANSITIVE_DEPENDENCIES}
        )

INSTALL(TARGETS ${PROJECT_NAME})

get_target_property(FINAL_LINKED_LIBS ${PROJECT_NAME} LINK_LIBRARIES)
message("Final list of linked libraries: ${FINAL_LINKED_LIBS}")

INCLUDE(${ROOT_DIR}/buildsystem/CMake/package.cmake)
