CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(ProductionCode)

SET(PRODUCTION_DIR ${ROOT_DIR}/production)
SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include)
SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include PARENT_SCOPE)

MESSAGE(STATUS "Production code directory: " ${PRODUCTION_DIR})
MESSAGE(STATUS "Production code includes: " ${PRODUCTION_INCLUDE_DIR})

ADD_SUBDIRECTORY(libs)
SET(SEMI_INTERNAL_LIBRARIES ${SEMI_INTERNAL_LIBRARIES} PARENT_SCOPE)
SET(SEMI_INTERNAL_LIBRARIES_INCLUDES ${PUGIXML_INCLUDE_DIR} ${CHAISCRIPT_INCLUDE_DIR} PARENT_SCOPE)

ADD_SUBDIRECTORY(subsystems)
SET(INTERNAL_LIBRARIES ${INTERNAL_LIBRARIES} PARENT_SCOPE)