CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(ProductionCode)

SET(PRODUCTION_DIR ${ROOT_DIR}/production)
SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include)
SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include PARENT_SCOPE)

MESSAGE(STATUS "Production code directory: " ${PRODUCTION_DIR})
MESSAGE(STATUS "Production code includes: " ${PRODUCTION_INCLUDE_DIR})

ADD_SUBDIRECTORY(subsystems)
SET(INTERNAL_LIBRARIES ${INTERNAL_LIBRARIES} PARENT_SCOPE)
