CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(LIBRARIES)

SET(LIBRARIES_BASE_DIR ${PRODUCTION_DIR}/libs)

ADD_SUBDIRECTORY(pugixml)
MESSAGE(STATUS "Using pugixml includes from: " ${PUGIXML_INCLUDE_DIR})
SET(PUGIXML_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)

ADD_SUBDIRECTORY(ChaiScript)
MESSAGE(STATUS "Using ChaiScript from: " ${CHAISCRIPT_INCLUDE_DIR})
SET(CHAISCRIPT_INCLUDE_DIR ${CHAISCRIPT_INCLUDE_DIR} PARENT_SCOPE)

ADD_SUBDIRECTORY(spdlog)
MESSAGE(STATUS "Using spdlog from: " ${SPDLOG_INCLUDE_DIR})
SET(SPDLOG_INCLUDE_DIR ${SPDLOG_INCLUDE_DIR} PARENT_SCOPE)

ADD_SUBDIRECTORY(sqlite)
MESSAGE(STATUS "Using sqlite from: " ${SQLITE_INCLUDE_DIR})
SET(SQLITE_INCLUDE_DIR ${SQLITE_INCLUDE_DIR} PARENT_SCOPE)

ADD_SUBDIRECTORY(libwebsockets)
MESSAGE(STATUS "Using libwebsockets from: " ${LIBWEBSOCKETS_INCLUDE_DIR})
SET(LIBWEBSOCKETS_INCLUDE_DIR ${LIBWEBSOCKETS_INCLUDE_DIR} PARENT_SCOPE)

ADD_SUBDIRECTORY(rapidjson)
MESSAGE(STATUS "Using rapidjson from: " ${RAPIDJSON_INCLUDE_DIR})
SET(RAPIDJSON_INCLUDE_DIR ${RAPIDJSON_INCLUDE_DIR} PARENT_SCOPE)

SET(SEMI_INTERNAL_LIBRARIES pugixml sqlite rapidjson libwebsockets PARENT_SCOPE)
