CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME Benchmarks)
PROJECT(${PROJECT_NAME})
SET(BENCHMARK_PROJECT ${PROJECT_NAME} PARENT_SCOPE)

INCLUDE_DIRECTORIES(${CELERO_INCLUDE_DIR})

FILE(GLOB SOURCES ${TEST_DIR}/benchmarks/*/*.cpp ${TEST_DIR}/benchmarks/main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${INTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} ${TEST_LIBRARIES})

MESSAGE(STATUS "Building benchmark project")
