CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

SET(PROJECT_NAME Testcases)
PROJECT(${PROJECT_NAME})
SET(TESTCASES_PROJECT ${PROJECT_NAME} PARENT_SCOPE)

SET(TESTCASES_INCLUDES ${TEST_FRAMEWORK_INCLUDE_DIRS}/testcases/include)
INCLUDE_DIRECTORIES(${TESTCASES_INCLUDES})

FILE(GLOB HEADERS ${TESTCASES_INCLUDES}/**/*.hpp ${TESTCASES_INCLUDES}/*.hpp)
FILE(GLOB SOURCES ${TEST_DIR}/testcases/**/*.cpp ${TEST_DIR}/testcases/main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${INTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} ${EXTERNAL_TEST_LIBRARIES} ${TEST_LIBRARIES})

MESSAGE(STATUS "Building testcase project")
