CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME ChaiScript)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Fetching ChaiScript")

SET(CHAISCRIPT_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/ChaiScript/ChaiScript/include)
SET(CHAISCRIPT_INCLUDE_DIR ${CHAISCRIPT_INCLUDE_DIR} PARENT_SCOPE)

SET(BUILD_TESTING OFF CACHE BOOL "Enable tests for ChaiScript")
SET(BUILD_SAMPLES OFF CACHE BOOL "Enable samples for ChaiScript")

ADD_SUBDIRECTORY(ChaiScript)