CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME libarchive)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(LIBARCHIVE_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/libarchive/libarchive)
SET(LIBARCHIVE_INCLUDE_DIR ${LIBARCHIVE_INCLUDE_DIR} PARENT_SCOPE)

INCLUDE_DIRECTORIES(${LIBARCHIVE_INCLUDE_DIR})

SET(ENABLE_OPENSSL OFF)
ADD_SUBDIRECTORY(libarchive)
