CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

SET(PROJECT_NAME libarchive)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(LIBARCHIVE_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/libarchive/libarchive)
SET(LIBARCHIVE_INCLUDE_DIR ${LIBARCHIVE_INCLUDE_DIR} PARENT_SCOPE)

INCLUDE_DIRECTORIES(${LIBARCHIVE_INCLUDE_DIR})

SET(ENABLE_OPENSSL OFF)
SET(USE_BZIP2_DLL OFF)
SET(WITHOUT_LZMA_API_STATIC OFF)
SET(LZMA_API_STATIC ON)
SET(WITHOUT_LIBXML_STATIC OFF)
SET(LIBXML_STATIC ON)
SET(ENABLE_ZLIB OFF)
ADD_SUBDIRECTORY(libarchive)

get_target_property(LIBARCHIVE_TRANSITIVE_DEPENDENCIES archive_static LINK_LIBRARIES)
message("Libarchive transitive dependencies: ${LIBARCHIVE_TRANSITIVE_DEPENDENCIES}")

SET(LIBARCHIVE_TRANSITIVE_DEPENDENCIES ${LIBARCHIVE_TRANSITIVE_DEPENDENCIES} PARENT_SCOPE)
