CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

SET(PROJECT_NAME libssh2)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(LIBSSH2_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/libssh2/libssh2/include)
SET(LIBSSH2_INCLUDE_DIR ${LIBSSH2_INCLUDE_DIR} PARENT_SCOPE)

SET(BUILD_SHARED_LIBS OFF)
SET(BUILD_EXAMPLES OFF)
SET(BUILD_TESTING OFF)

INCLUDE_DIRECTORIES(${LIBSSH2_INCLUDE_DIR})
ADD_SUBDIRECTORY(libssh2)
