CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME libwebsockets)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring ${PROJECT_NAME}")

SET(LWS_WITH_SSL ON)


IF("${OPENSSL_INCLUDE_DIR}" STREQUAL "")
  ADD_DEFINITIONS(-DHAVE_EX_DATA -DOPENSSL_ALL)
  ADD_SUBDIRECTORY(wolfssl)
  EXPORT(TARGETS wolfssl FILE wolfssl-internal.cmake)
  SET(LWS_WITH_WOLFSSL ON)
  SET(LWS_WOLFSSL_LIBRARIES wolfssl)
  SET(LWS_WOLFSSL_INCLUDE_DIRS ${LIBRARIES_BASE_DIR}/libwebsockets/wolfssl)

  SET(LIBWEBSOCKETS_EXPORTS wolfssl websockets)
ELSE()
  SET(LIBWEBSOCKETS_EXPORTS websockets)
ENDIF("${OPENSSL_INCLUDE_DIR}" STREQUAL "")

ADD_SUBDIRECTORY(libwebsockets)

SET(LIBWEBSOCKETS_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/libwebsockets/libwebsockets/include)
SET(LIBWEBSOCKETS_INCLUDE_DIR ${LIBWEBSOCKETS_INCLUDE_DIR} PARENT_SCOPE)

INCLUDE_DIRECTORIES(${LIBWEBSOCKETS_INCLUDE_DIR})

SET(LIBWEBSOCKETS_EXPORTS ${LIBWEBSOCKETS_EXPORTS} PARENT_SCOPE)