CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME pugixml)
PROJECT(${PROJECT_NAME})

MESSAGE(STATUS "Configuring pugixml")

SET(PUGIXML_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/pugixml/pugixml/src)
SET(PUGIXML_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)

FILE(GLOB SOURCES ${PUGIXML_INCLUDE_DIR}/*.cpp)

INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})