CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME sqlite)
PROJECT(${PROJECT_NAME} C)

MESSAGE(STATUS "Configuring sqlite")

SET(SQLITE_VERSION 3340000)
SET(SQLITE_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/sqlite/sqlite-amalgamation-${SQLITE_VERSION})
SET(SQLITE_INCLUDE_DIR ${SQLITE_INCLUDE_DIR} PARENT_SCOPE)

FILE(GLOB SOURCES ${SQLITE_INCLUDE_DIR}/*.c)

INCLUDE_DIRECTORIES(${SQLITE_INCLUDE_DIR})

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})