CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

SET(PROJECT_NAME executor)

PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${PRODUCTION_DIR}/subsystems/${PROJECT_NAME}/src)

INCLUDE_DIRECTORIES(${QT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LIBARCHIVE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBSSH2_INCLUDE_DIR})

FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/${PROJECT_NAME}/*.h)
FILE (GLOB SOURCES ${PROJECT_DIR}/*.cpp)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${HEADERS})
target_link_libraries(${PROJECT_NAME} ${LIBXML2_LIBRARIES} ${LibArchive_LIBRARY})
