CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

SET(PROJECT_NAME ui)

PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${PRODUCTION_DIR}/subsystems/${PROJECT_NAME})

FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/${PROJECT_NAME}/*.h)
FILE (GLOB SOURCES ${PROJECT_DIR}/src/*.cpp)
FILE (GLOB DESIGNS_UI ${PROJECT_DIR}/ui/*.ui)

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${DESIGNS_UI} ${HEADERS})
