CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

SET(PROJECT_NAME ui)

PROJECT(${PROJECT_NAME})

SET(PROJECT_DIR ${PRODUCTION_DIR}/subsystems/${PROJECT_NAME})

SET(DESIGNS_DIR ${PROJECT_DIR}/ui)

INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR}/${PROJECT_NAME})
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LIBARCHIVE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${LIBSSH2_INCLUDE_DIR})

FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/${PROJECT_NAME}/*.h)
FILE (GLOB SOURCES ${PROJECT_DIR}/src/*.cpp)
FILE (GLOB DESIGNS_UI ${DESIGNS_DIR}/*.ui)

SET(CMAKE_AUTOUIC_SEARCH_PATHS ${DESIGNS_DIR})

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES} ${DESIGNS_UI} ${HEADERS})
target_link_libraries(${PROJECT_NAME} executor)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES AUTOUIC ON)