CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

PROJECT(Celero)

MESSAGE(STATUS "Configuring Celero")
SET(CELERO_ENABLE_EXPERIMENTS OFF CACHE BOOL "Set to ON to automatically build all examples.")
SET(CELERO_ENABLE_TESTS OFF CACHE BOOL "Enable building and running unit tests.")

ADD_SUBDIRECTORY(Celero)

SET(CELERO_INCLUDE_DIR ${TEST_LIBRARIES_BASE_DIR}/Celero/Celero/include PARENT_SCOPE)